# CoFee-EHA

./: CMakeLists.txt  GenericErrorCodeChecker.cpp  README.md
tests/: Makefile  README.md  compile_commands.json  csaargs  getwd_clean_buffer_ref_passed_as_arg.c  getwd_clean_complex_func_first_use_in_func.c  getwd_clean_first_use_as_read.c  getwd_clean_first_use_as_write.c  getwd_clean_first_use_in_func.c  getwd_clean_malloc_first_use_as_read.c  getwd_clean_malloc_first_use_as_write.c  getwd_clean_malloc_first_use_in_func.c  getwd_dirty_buffer_ref_passed_as_arg.c  getwd_dirty_complex_func_first_use_in_func.c  getwd_dirty_first_use_as_read.c  getwd_dirty_first_use_as_write.c  getwd_dirty_first_use_in_func.c  getwd_dirty_malloc_first_use_as_read.c  getwd_dirty_malloc_first_use_as_write.c  getwd_dirty_malloc_first_use_in_func.c  malloc_clean_custom_allocator.c  malloc_dirty_custom_allocator.c  open_clean_array_first_use_in_func.c  open_clean_first_use_in_func.c  open_clean_malloc_array_first_use_in_func.c  open_clean_malloc_first_use_in_func.c  open_dirty_array_first_use_in_func.c  open_dirty_first_use_in_func.c  open_dirty_malloc_array_first_use_in_func.c  open_dirty_malloc_first_use_in_func.c  read_clean_return_lost_first_use_in_func.c  read_clean_while_loop_first_use_in_func.c  read_dirty_return_lost_first_use_in_func.c  read_dirty_while_loop_first_use_in_func.c
tests/results-html/: getwd_clean_buffer_ref_passed_as_arg.c_clang-tidy_7b1c52380cb642ee7db797b7dda11d80.plist.html  getwd_clean_buffer_ref_passed_as_arg.c_clangsa_7b1c52380cb642ee7db797b7dda11d80.plist.html  (+46 more)
(+73 files in other folders)
